--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.DevsCheese</groupId>
-    <artifactId>bukkitTimer</artifactId>
+    <artifactId>bukkit-timer</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -21,12 +21,47 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>Bukkit Timer</name>
-            <url>https://maven.pkg.github.com/DevsCheese/Bukkit-timer</url>
+            <name>GitHub DevsCheese Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/DevsCheese/bukkit-timer</url>
         </repository>
     </distributionManagement>
 
+    <developers>
+        <developer>
+            <name>Devs Cheese</name>
+            <email>devs.cheese@gmail.com</email>
+            <organization>com.github.devscheese</organization>
+            <organizationUrl>https://github.com/DevsCheese/Bukkit-timer</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/DevsCheese/Bukkit-timer.git</connection>
+        <developerConnection>scm:git:https://github.com/DevsCheese/Bukkit-timer.git</developerConnection>
+        <url>https://github.com/DevsCheese/Bukkit-timer</url>
+        <tag>Bukkit-timer</tag>
+    </scm>
+
     <build>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.9.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -37,21 +72,11 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                        </configuration>
-                    </execution>
-                </executions>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.0-M1</version>
             </plugin>
         </plugins>
         <resources>
