--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,13 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - '**'
+      - '!main'
   pull_request:
-    branches: [ main ]
+    branches:
+      - 'main'
+      - 'develop'
 
 jobs:
   build:
@@ -17,26 +21,36 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-          
+
+      - name: Set up Artifact Name
+        run: |
+          VERSION=$( mvn help:evaluate -Dexpression=project.version -q -DforceStdout )
+          NAME=$( mvn help:evaluate -Dexpression=project.artifactId -q -DforceStdout )
+          echo "::set-output name=VERSION::$VERSION"
+          echo "::set-output name=NAME::$NAME"
+        id: get_projet
+
       - name: Build Maven Project
-        run: | 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
           mvn -B package --file pom.xml
           mkdir staging && cp target/*.jar staging
-        
+
       - name: Set up cache
         uses: actions/cache@v2
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-          
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: Bukkit Timer
+          name: ${{ steps.get_projet.outputs.NAME }}-${{ steps.get_projet.outputs.VERSION }}
           path: staging
